--- a/_assets/scss/partials/_images.scss
+++ b/_assets/scss/partials/_images.scss
@@ -5,11 +5,6 @@
 // Sprite and image helpers should go here
 //
 
-figure {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 figure img {
   display: block;
   width: 100%;
